# complainsg-v2

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/agent/: __init__.py  flow.py  main.py  nodes.py  utils.py
backend/agent/docs/: design.md
backend/agent/utils/: __init__.py  call_llm.py  call_llm_async.py  extract_structured_data.py  get_embedding.py  save_complaint.py  singapore_resources.py  stream_llm.py  stream_llm_async.py
backend/app/: app.py  conversations.py  db.py  pulse.py  schemas.py  users.py
backend/reference-agent/: flow.py  nodes.py  server.py  utils.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: conversations.ts
frontend/src/components/: DarkModeToggle.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useChatWithConversations.ts  useConversations.ts
frontend/src/layout/: AppSidebar.tsx  MainLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/auth/: index.tsx
frontend/src/pages/chat/: index.tsx
frontend/src/pages/chat/components/: ChatMessage.tsx
frontend/src/pages/landing/: index.tsx  page.tsx
frontend/src/pages/pulse/: index.tsx
frontend/src/pages/pulse/components/: AnalyticsOverview.tsx  ComplaintDetail.tsx  ComplaintsList.tsx  SingaporeMap.tsx
frontend/src/routes/: auth.tsx  chat.tsx  index.tsx  pulse.tsx
frontend/src/types/: auth.ts  chat.ts  conversation.ts
nginx/: nginx.conf
nginx/conf.d/: default.conf
